[gd_scene load_steps=28 format=3 uid="uid://c486y12tqawhf"]

[ext_resource type="Script" path="res://Scripts/Player/Movement/player_move_state.gd" id="1_7qewy"]
[ext_resource type="Texture2D" uid="uid://ct2abnecvpkj5" path="res://Art/Characters/satiro-Sheet v1.1.png" id="2_bksbk"]
[ext_resource type="Script" path="res://Scripts/Scale/scaler.gd" id="3_7kewy"]
[ext_resource type="Script" path="res://Scripts/Player/Movement/player_climb_state.gd" id="4_cv3oq"]
[ext_resource type="Script" path="res://Scripts/Scale/scale_settings.gd" id="4_ohq31"]
[ext_resource type="Script" path="res://Scripts/Key/key_collecter.gd" id="5_72xwt"]
[ext_resource type="Script" path="res://Scripts/FSM/fsm.gd" id="6_hi7jq"]
[ext_resource type="Script" path="res://Scripts/Player/Animations/idle_anim.gd" id="7_g4i1j"]
[ext_resource type="Script" path="res://Scripts/Player/Animations/run_anim.gd" id="8_d5cf5"]
[ext_resource type="Script" path="res://Scripts/Player/ladder_check.gd" id="9_sxq6s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_550f6"]
atlas = ExtResource("2_bksbk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtu7t"]
atlas = ExtResource("2_bksbk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6dsb"]
atlas = ExtResource("2_bksbk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgeo0"]
atlas = ExtResource("2_bksbk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxchu"]
atlas = ExtResource("2_bksbk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwunw"]
atlas = ExtResource("2_bksbk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdvdh"]
atlas = ExtResource("2_bksbk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4cre"]
atlas = ExtResource("2_bksbk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffobk"]
atlas = ExtResource("2_bksbk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ikdm"]
atlas = ExtResource("2_bksbk")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_anx0d"]
atlas = ExtResource("2_bksbk")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbmtd"]
atlas = ExtResource("2_bksbk")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl0m4"]
atlas = ExtResource("2_bksbk")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fvpi"]
atlas = ExtResource("2_bksbk")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s4gcj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_550f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtu7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6dsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgeo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxchu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwunw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdvdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4cre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffobk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ikdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anx0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbmtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl0m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fvpi")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_koonx"]
size = Vector2(10.5, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_et01t"]
size = Vector2(2.5, 14)

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -11)
collision_layer = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 0)
sprite_frames = SubResource("SpriteFrames_s4gcj")
animation = &"idle"
autoplay = "idle"

[node name="MovementController" type="Node2D" parent="."]
script = ExtResource("6_hi7jq")

[node name="MoveState" type="Node2D" parent="MovementController" node_paths=PackedStringArray("body")]
script = ExtResource("1_7qewy")
body = NodePath("../..")
cyotee_jump_window = 0.1

[node name="ClimbState" type="Node2D" parent="MovementController" node_paths=PackedStringArray("body")]
script = ExtResource("4_cv3oq")
body = NodePath("../..")
climb_speed = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, 3.75)
shape = SubResource("RectangleShape2D_koonx")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(2, 2)
zoom = Vector2(10, 10)

[node name="Scaler" type="Node2D" parent="." node_paths=PackedStringArray("default_scale", "player_root", "camera", "player_movement")]
script = ExtResource("3_7kewy")
default_scale = NodePath("Medium")
player_root = NodePath("..")
camera = NodePath("../Camera2D")
player_movement = NodePath("../MovementController/MoveState")
scale_speed = 0.5

[node name="Small" type="Node2D" parent="Scaler"]
script = ExtResource("4_ohq31")
id = 1
camera_zoom = 15.0
player_scale = 0.5
jump_strength = 0.5
move_speed = 0.5

[node name="Medium" type="Node2D" parent="Scaler"]
script = ExtResource("4_ohq31")
id = 2
camera_zoom = 10.0
player_scale = 1.0
jump_strength = 1.0
move_speed = 1.0

[node name="Large" type="Node2D" parent="Scaler"]
script = ExtResource("4_ohq31")
id = 3
camera_zoom = 8.0
player_scale = 2.0
jump_strength = 2.0
move_speed = 2.0

[node name="KeyCollecter" type="Node2D" parent="."]
script = ExtResource("5_72xwt")

[node name="Animator" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_hi7jq")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="Animator" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("7_g4i1j")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Run" type="Node2D" parent="Animator" node_paths=PackedStringArray("animated_sprite", "player_root")]
script = ExtResource("8_d5cf5")
animated_sprite = NodePath("../../AnimatedSprite2D")
player_root = NodePath("../..")

[node name="LadderCheck" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("9_sxq6s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderCheck"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_et01t")
